<resources>
    <string name="app_name">My Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="change">change</string>
    <string name="first_name">First Name</string>
    <string name="gender">Gender</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="hometown">Hometown</string>
    <string name="ph_no">Phone Number</string>
    <string name="add_photo">add photo</string>
    <string name="add_user">Add User</string>
</resources>